test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-owned-from-oknil-shared.good
init-field-dflt-nonnil-owned-from-oknil-shared.chpl:11: error: default-initializing a field with a non-nilable type owned MyClass from an instance of nilable shared MyClass?
